# minimax_simultaneous_interpretation

./: .env.example  .gitignore  README.md  prepare_for_github.sh  pyproject.toml  requirements.txt  run.py  run_remote.py
backend/: app.py
backend/api_clients/: minimax_client.py  t2a_client.py
backend/services/: audio_processor.py  translation_queue.py  websocket_handler.py  whisper_service.py
docs/: CLAUDE.md  PRD.md
real-time-translator/: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml  run_remote.py  t2v.txt  test_api_direct.py  test_fix.py  test_minimax.py  test_t2v_urls.py  translate.txt
real-time-translator/backend/: app.py
real-time-translator/backend/api_clients/: __init__.py  minimax_client.py  t2v_client.py
real-time-translator/backend/services/: audio_processor.py  translation_queue.py  websocket_handler.py  whisper_service.py
real-time-translator/certs/: README.md  cert.pem  key.pem
scripts/: restart_server.sh
